Completed Document Management Module with upload, download, verify and delete APIs